--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/store-devtools": "^12.4.0",
     "@ngx-loading-bar/core": "^5.1.2",
     "@ngx-loading-bar/router": "^5.1.2",
+    "jwt-decode": "^3.1.2",
     "ng-recaptcha": "^8.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
