--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@angular/router": "~12.2.11",
     "@ngneat/tailwind": "^7.0.3",
     "@ngrx/component": "^12.5.0",
-    "@ngrx/effects": "^12.4.0",
+    "@ngrx/effects": "^12.5.0",
     "@ngrx/router-store": "^12.5.0",
-    "@ngrx/store": "^12.4.0",
-    "@ngrx/store-devtools": "^12.4.0",
+    "@ngrx/store": "^12.5.0",
+    "@ngrx/store-devtools": "^12.5.0",
     "@ngx-loading-bar/core": "^5.1.2",
     "@ngx-loading-bar/router": "^5.1.2",
     "jwt-decode": "^3.1.2",
@@ -42,9 +42,9 @@
     "@tailwindcss/line-clamp": "0.2.1",
     "@tailwindcss/typography": "0.4.1",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.34",
     "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
+    "karma": "^6.3.5",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
