--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "jwt-decode": "^3.1.2",
     "luxon": "^2.0.2",
     "ng-recaptcha": "^8.0.1",
+    "ngx-quill": "^14.3.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -45,6 +47,7 @@
     "@types/jasmine": "~3.8.0",
     "@types/luxon": "^2.0.5",
     "@types/node": "^12.20.34",
+    "@types/quill": "^1.3.10",
     "jasmine-core": "~3.8.0",
     "karma": "^6.3.5",
     "karma-chrome-launcher": "~3.1.0",
