--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "luxon": "^2.0.2",
     "ng-recaptcha": "^8.0.1",
     "ngx-quill": "^14.3.0",
+    "ngx-socket-io": "^4.1.0",
     "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
