--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngx-loading-bar/core": "^5.1.2",
     "@ngx-loading-bar/router": "^5.1.2",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "luxon": "^2.0.2",
     "ng-recaptcha": "^8.0.1",
     "ngx-quill": "^14.3.0",
@@ -46,6 +47,7 @@
     "@tailwindcss/line-clamp": "0.2.1",
     "@tailwindcss/typography": "0.4.1",
     "@types/jasmine": "~3.8.0",
+    "@types/lodash": "^4.14.176",
     "@types/luxon": "^2.0.5",
     "@types/node": "^12.20.34",
     "@types/quill": "^1.3.10",
