Add slideshow mode for image, fix UI related issues

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.2.11",
     "@angular/platform-browser-dynamic": "~12.2.11",
     "@angular/router": "~12.2.11",
+    "@ngbmodule/material-carousel": "^0.7.1",
     "@ngneat/tailwind": "^7.0.3",
     "@ngrx/component": "^12.5.0",
     "@ngrx/effects": "^12.5.0",
